--- a/Master Thesis/literatura.bib
+++ b/Master Thesis/literatura.bib
@@ -183,3 +183,15 @@
 	title = {Homo sapiens},
 	url = {https://www.ncbi.nlm.nih.gov/genome/?term=Homo+sapiens}
 }
+
+@misc{haplotype,
+	author = {Scitable},
+	title = {haplotype},
+	url = {https://www.nature.com/scitable/definition/haplotype-haplotypes-142/}
+}
+
+@misc{haplotype_usage,
+	author = {PacBio},
+	title = {Sequencing 101: ploidy, haplotypes, and phasing — how to get more from your sequencing data},
+	url = {https://www.pacb.com/blog/ploidy-haplotypes-and-phasing/}
+}
